logs/dag_id=make_parquet/run_id=scheduled__2024-07-13T00:00:00+00:00/task_id=to.parquet/attempt=5.log
[2024-07-24T16:28:25.835+0900] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2024-07-24T16:28:25.843+0900] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: make_parquet.to.parquet scheduled__2024-07-13T00:00:00+00:00 [queued]>
[2024-07-24T16:28:25.846+0900] {taskinstance.py:2076} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: make_parquet.to.parquet scheduled__2024-07-13T00:00:00+00:00 [queued]>
[2024-07-24T16:28:25.846+0900] {taskinstance.py:2306} INFO - Starting attempt 5 of 6
[2024-07-24T16:28:25.849+0900] {taskinstance.py:2330} INFO - Executing <Task(BashOperator): to.parquet> on 2024-07-13 00:00:00+00:00
[2024-07-24T16:28:25.852+0900] {standard_task_runner.py:64} INFO - Started process 315 to run task
[2024-07-24T16:28:25.854+0900] {standard_task_runner.py:90} INFO - Running: ['airflow', 'tasks', 'run', 'make_parquet', 'to.parquet', 'scheduled__2024-07-13T00:00:00+00:00', '--job-id', '465', '--raw', '--subdir', 'DAGS_FOLDER/make_parquet.py', '--cfg-path', '/var/folders/qv/0knwm5h50ml0skpppwpbks_r0000gp/T/tmpge1dqzl4']
[2024-07-24T16:28:25.855+0900] {standard_task_runner.py:91} INFO - Job 465: Subtask to.parquet
[2024-07-24T16:28:25.870+0900] {task_command.py:426} INFO - Running <TaskInstance: make_parquet.to.parquet scheduled__2024-07-13T00:00:00+00:00 [running]> on host jeongui-MacBookPro.local
[2024-07-24T16:28:25.892+0900] {taskinstance.py:2648} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='airflow' AIRFLOW_CTX_DAG_ID='make_parquet' AIRFLOW_CTX_TASK_ID='to.parquet' AIRFLOW_CTX_EXECUTION_DATE='2024-07-13T00:00:00+00:00' AIRFLOW_CTX_TRY_NUMBER='5' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-07-13T00:00:00+00:00'
[2024-07-24T16:28:25.892+0900] {taskinstance.py:430} INFO - ::endgroup::
[2024-07-24T16:28:25.898+0900] {subprocess.py:63} INFO - Tmp dir root location: /var/folders/qv/0knwm5h50ml0skpppwpbks_r0000gp/T
[2024-07-24T16:28:25.898+0900] {subprocess.py:75} INFO - Running command: ['/bin/bash', '-c', '\n        echo "to.parquet"\n\n        READ_PATH=~/data/csv/20240713/csv.csv\n        SAVE_PATH=~/data/parquet/20240713/parquet.parquet\n\n        mkdir -p $SAVE_PATH\n\n        python ~/airflow/operator/csv2parquet.py $READ_PATH $SAVE_PATH\n        ']
[2024-07-24T16:28:25.901+0900] {subprocess.py:86} INFO - Output:
[2024-07-24T16:28:25.903+0900] {subprocess.py:93} INFO - to.parquet
[2024-07-24T16:28:25.912+0900] {subprocess.py:93} INFO -   File "/Users/DE32/airflow/operator/csv2parquet.py", line 9
[2024-07-24T16:28:25.912+0900] {subprocess.py:93} INFO -     encoding_errors='ignore'
[2024-07-24T16:28:25.912+0900] {subprocess.py:93} INFO -                     ^^^^^^^^
[2024-07-24T16:28:25.913+0900] {subprocess.py:93} INFO - SyntaxError: invalid syntax. Perhaps you forgot a comma?
[2024-07-24T16:28:25.914+0900] {subprocess.py:97} INFO - Command exited with return code 1
[2024-07-24T16:28:25.914+0900] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2024-07-24T16:28:25.917+0900] {taskinstance.py:2905} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/Users/DE32/.pyenv/versions/3.11.9/envs/note/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/DE32/.pyenv/versions/3.11.9/envs/note/lib/python3.11/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/DE32/.pyenv/versions/3.11.9/envs/note/lib/python3.11/site-packages/airflow/models/baseoperator.py", line 401, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/DE32/.pyenv/versions/3.11.9/envs/note/lib/python3.11/site-packages/airflow/operators/bash.py", line 243, in execute
    raise AirflowException(
airflow.exceptions.AirflowException: Bash command failed. The command returned a non-zero exit code 1.
[2024-07-24T16:28:25.919+0900] {taskinstance.py:1206} INFO - Marking task as UP_FOR_RETRY. dag_id=make_parquet, task_id=to.parquet, run_id=scheduled__2024-07-13T00:00:00+00:00, execution_date=20240713T000000, start_date=20240724T072825, end_date=20240724T072825
[2024-07-24T16:28:25.922+0900] {standard_task_runner.py:110} ERROR - Failed to execute job 465 for task to.parquet (Bash command failed. The command returned a non-zero exit code 1.; 315)
[2024-07-24T16:28:25.961+0900] {local_task_job_runner.py:243} INFO - Task exited with return code 1
[2024-07-24T16:28:25.968+0900] {taskinstance.py:3503} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2024-07-24T16:28:25.969+0900] {local_task_job_runner.py:222} INFO - ::endgroup::
